k8s/templates/platform/ocp/patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-unleashservice
spec:
  template:
    spec:
      containers:
        - name: hhb-unleashservice
