k8s/templates/platform/ocp/remove_dex_patch.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hhb-dex-route
${DOLLAR}patch: delete
